--- a/client/src/App.css
+++ b/client/src/App.css
@@ -151,7 +151,8 @@ body {
 }
 
 .error_message{
-	color: white;
-	font-size: 10px;
-	padding-top: 5px;
+	color: red;
+	font-size: 14px;
+	margin-top: 15px;
+	
 }
